Fix .thumb z-index

--- a/src/less/layout-thumb.less
+++ b/src/less/layout-thumb.less
@@ -1,6 +1,7 @@
 
 .thumb {
   display: none;
+  z-index: 2;
   width: 120px;
   height: 120px;
   border-radius: 1px;
